test/fixtures/public/fail/semantic/extra/miss_type.jmm
/*  REASON:
    Type "miss" is missing.
*/

class T {
    public static void main(String[] a) { 
        Miss m;
    }
}
